# blue

./: .clangd  README.md  TODO.md  main.c  meson.build
inc/: core.h  platform.h  vec.h
src/: core.c  main.c  platform.c  test.c
